# cdkdiff

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/plans/: 2026-02-25-cdkdiff-initial.md
src/cdkdiff/: cli.py  github_client.py  models.py  parser.py  runner.py  scorer.py
src/cdkdiff/formatters/: github_fmt.py  json_fmt.py  terminal.py
tasks/: todo.md
tests/: test_cli.py  test_formatters.py  test_github_client.py  test_models.py  test_parser.py  test_runner.py  test_scorer.py
tests/fixtures/: mixed_changes.txt  multi_stack.txt  no_changes.txt  replacement_changes.txt  simple_add.txt
